# hpp-corbaserver

./: CMakeLists.txt
cmake-modules/omniidl/cxx_impl/: main.py  template.py
csharp/: CMakeLists.txt
csharp/src/: check-connection.cs  client.cs
idl/hpp/constraints_idl/: constraints.idl
idl/hpp/corbaserver/: common.idl  problem.idl  robot.idl
idl/hpp/core_idl/: _constraints.idl  _problem.idl  paths.idl
include/hpp/corbaserver/: discretization.hh  server.hh
src/: CMakeLists.txt  discretization.cc  obstacle.impl.cc  obstacle.impl.hh  problem.impl.cc  problem.impl.hh  robot.impl.cc  robot.impl.hh  server-private.cc  server-private.hh  server.cc  tools.cc
src/hpp/corbaserver/: __init__.py  commands.py  problem_solver.py  robot.py
